# sql-inspect

./: .gitignore  Makefile  README.md  manage.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: python-publish.yml
dj-sql-logger/: README.md  pyproject.toml  requirements.txt
docs/: conf.py  index.md  index.rst
package/: pyproject.toml
package/tests/: settings.py  test_demo.py
package/tests/demo_app/: models.py  urls.py  views.py
sql_inspect/: __init__.py  _core.py  middleware.py
sqlanalyzer/: asgi.py  settings.py  urls.py  wsgi.py
sqlquery/: factory.py  middleware.py  models.py  populate.py  urls.py  views.py
sqlquery/migrations/: 0001_initial.py
tests/: patchlog.txt  settings.py  test_core.py  test_demo.py
tests/demo_app/: urls.py  views.py
