[build-system]
requires = ["setuptools>=69.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sql-inspect"]

[project]
name = "sql-inspect"
version = "1.0.0"
description = "A django middleware package for logging database queries sql to console"
readme = "README.md"
license = { file = "LICENSE"}
authors = [{ name = "Paul Onyekwelu"}]

keywords = ["sql", "logging", "logger", "console", "Terminal"]

requires-python = ">=3.11"

dependencies = ["sqlparse>=0.4.4", "Pygments>=2.17.2"]

[project.urls]
Homepage = "http://github.com/PaulOnyekwelu"
